[metadata]
name = phoenix
version = 1.0.0
author = K4YT3X
author_email = k4yt3x@k4yt3x.com
license = GNU General Public License v3.0
description = An exploitation framework written for curious reasons
url = https://github.com/pwnwikiorg/phoenix
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Topic :: Security
    Environment :: Console
    Programming Language :: Python
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
install_requires = colorama; loguru; rich
python_requires = >=3.6

[options.entry_points]
console_scripts = phoenix = phoenix:main
